# mobilizon-reshare

./: .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  aerich.ini  channels-lock.scm  docker-compose-migration.yml  docker-compose-test.yml  docker-compose-web.yml  docker-compose.yml  docker-image.scm  generate_doc.sh  guix.scm  manifest.scm  mobilizon-reshare.scm  pyproject.toml
.github/workflows/: main.yml  release.yml
api-documentation/mobilizon_reshare/: index.html
api_documentation/source/: conf.py  index.rst  mobilizon_reshare.cli.commands.format.rst  mobilizon_reshare.cli.commands.list.rst  mobilizon_reshare.cli.commands.recap.rst  mobilizon_reshare.cli.commands.rst  mobilizon_reshare.cli.commands.start.rst  mobilizon_reshare.cli.rst  mobilizon_reshare.config.rst  mobilizon_reshare.event.rst  mobilizon_reshare.formatting.rst  mobilizon_reshare.main.rst  mobilizon_reshare.mobilizon.rst  mobilizon_reshare.models.rst  mobilizon_reshare.publishers.platforms.rst  mobilizon_reshare.publishers.rst  mobilizon_reshare.publishers.templates.rst  mobilizon_reshare.rst  mobilizon_reshare.storage.query.rst  mobilizon_reshare.storage.rst  modules.rst
doc/: add-new-publisher.md  contributing.md  dependency-hell.md  development-environment-with-guix.md  manual.md
docker/: image-debug.scm  image.scm  mobilizon-reshare.scm  scheduler.py  service.scm
docs/: development-environment-with-guix.md
etc/bash_completion.d/: mobilizon-reshare-completion.bash
etc/zsh/: mobilizon-reshare-completion.zsh
migrations/models/: 0_20211207110159_init.sql
mobilizon_bots/: __init__.py  cli.py  config.py  main.py  settings.toml
mobilizon_bots/cli/: __init__.py  cli.py  inspect.py  inspect_event.py  main.py
mobilizon_bots/config/: config.py  notifiers.py  publishers.py
mobilizon_bots/event/: db.py  event.py  event_selection_strategies.py  event_selector.py  model.py
mobilizon_bots/formatting/: description.py
mobilizon_bots/mobilizon/: events.py
mobilizon_bots/models/: event.py  notification.py  publication.py  publisher.py
mobilizon_bots/publishers/: __init__.py  abstract.py  coordinator.py  exceptions.py  telegram.py
mobilizon_bots/storage/: db.py  query.py
mobilizon_reshare/: .secrets.toml  aerich.ini  settings.toml
mobilizon_reshare/aerich_conf/: database.py
mobilizon_reshare/cli/: __init__.py  cli.py  format.py  inspect_event.py  main.py
mobilizon_reshare/config/: command.py  config.py  notifiers.py  publishers.py  strategies.py
mobilizon_reshare/dataclasses/: __init__.py  event.py  event_publication_status.py  publication.py  to_split.py
mobilizon_reshare/event/: event.py  event_selection_strategies.py
mobilizon_reshare/formatting/: description.py
mobilizon_reshare/main/: publish.py  pull.py  recap.py  retry.py  start.py
mobilizon_reshare/mobilizon/: events.py
mobilizon_reshare/models/: __init__.py  event.py  notification.py  publication.py  publisher.py
mobilizon_reshare/publishers/: __init__.py  abstract.py  coordinator.py  exceptions.py  telegram.py  zulip.py
mobilizon_reshare/storage/: db.py  query.py
mobilizon_reshare/web/: __init__.py
more/: cli.py  main.py  settings.toml
more/config/: config.py  notifiers.py  publishers.py
more/event/: event.py  event_selection_strategies.py
more/mobilizon/: events.py
patches/: dynaconf-Unvendor-dependencies.patch
scripts/: build_docker_image.sh  generate_aerich_migrations.sh  generate_badges.sh  generate_completion_scripts.sh  generate_doc.sh  install_github_actions_dev_dependencies.sh  mobilizon-reshare.sh  release.sh  run_pipeline_tests.sh  scheduler.py  test_cd.sh
tests/: __init__.py  configtest.py  conftest.py  test_mobilizon_bots.py  test_models.py
(+156 files in other folders)
