[tool.poetry]
name = "mobilizon-reshare"
version = "0.1.0"
description = "A suite to reshare Mobilizon events on a broad selection of platforms"
readme = "README.md"
homepage = "https://github.com/Tech-Workers-Coalition-Italia/mobilizon-reshare"
repository = "https://github.com/Tech-Workers-Coalition-Italia/mobilizon-reshare"
authors = ["Simone Robutti <simone.robutti@protonmail.com>"]
license = "Coopyleft"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1"
tortoise-orm = "^0.17"
aiosqlite = "^0.16"
Jinja2 = "^2.11"
requests = "^2.25"
arrow = "^1.1"
click = "^8.0"
beautifulsoup4 = "^4.9"
markdownify = "^0.9"
appdirs = "^1.4"
tweepy = "^4.1"
facebook-sdk = {git = "https://github.com/mobolic/facebook-sdk.git"}

[tool.poetry.dev-dependencies]
responses = "^0.13"
pytest-asyncio = "^0.15"
asynctest = "^0.13"
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-lazy-fixture = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mobilizon-reshare="mobilizon_reshare.cli.cli:mobilizon_reshare"

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=. --cov-report term-missing tests/"
