[tool.poetry]
name = "mobilizon-reshare"
version = "0.3.5"
description = "A suite to reshare Mobilizon events on a broad selection of platforms"
readme = "README.md"
homepage = "https://github.com/Tech-Workers-Coalition-Italia/mobilizon-reshare"
repository = "https://github.com/Tech-Workers-Coalition-Italia/mobilizon-reshare"
authors = ["Simone Robutti <simone.robutti@protonmail.com>"]
license = "Coopyleft"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "~3.1"
tortoise-orm = {extras = ["asyncpg"], version = "~0.19"}
aiosqlite = "~0.17"
Jinja2 = "~3.1"
requests = "~2.28"
arrow = "~1.1"
click = "~8.1"
beautifulsoup4 = "~4.11"
markdownify = "~0.10"
appdirs = "~1.4"
tweepy = "~4.13"
facebook-sdk = "~3.1"
aerich = "~0.6"
fastapi = "~0.85"
uvicorn = "~0.17"
fastapi-pagination = "^0.11.0"

[tool.poetry.dev-dependencies]
responses = "~0.13"
pytest-asyncio = "~0.15"
asynctest = "~0.13"
pytest = "~6.2"
pytest-cov = "~3.0"
pytest-lazy-fixture = "~0.6"
Sphinx = "~4.4"
sphinxcontrib-napoleon = "~0.7"
sphinx-material = "~0.0"
sphinx-autodoc-typehints = "~1.17"
httpx = "~0.23"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mobilizon-reshare="mobilizon_reshare.cli.cli:mobilizon_reshare"

